# python-automation-ecommerce

./: .gitignore  README.md  pyproject.toml  run.bat
Configurations/: config.ini
Reports/: report.html
pageObjects/: LoginPage.py
testCases/: conftest.py  test_login.py
utilities/: customLogger.py  readProperties.py
